--- a/Presentation/Main/main.css
+++ b/Presentation/Main/main.css
@@ -1,73 +1,73 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: none;
-    box-sizing: border-box;
-  }
-  body {
-    background-color: #f3f2ed;
-    overflow-x: hidden;
-  }
-  
-  
-  /*header*/
-  .header {
-    background-color: #0d3745;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 0 20px;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-  }
-  
-  .logo {
-    height: 50px;
-  }
-  .menu {
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-  }
-  .menu a {
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 300;
-    font-size: 17px;
-    padding: 10px;
-    margin-right: 13px;
-    width: 80px; /*텍스트 안 밀리게 수정*/
-    text-align: center;
-  }
-  .menu a:hover,
-  .menu a:focus {
-    color: #ffffff;
-    border-bottom: 3px solid #ffffff;
-    font-weight: 600;
-  }
-  .search-container {
-    position: relative;
-  }
-  .search {
-    background-color: #0d3745;
-    color: #ffffff;
-    padding: 5px 10px 5px 35px;
-    width: 277px;
-    height: 30px;
-    border: 1px solid #ffffff;
-    text-align: left;
-    outline: none;
-    border-radius: 5px;
-    font-size: 14px;
-    background-image: url("Search.svg"); /* 검색 아이콘 이미지 추가 */
-    background-repeat: no-repeat;
-    background-position: 10px center; /* 이미지 위치 조정 */
-    background-size: 15px 15px; /* 이미지 크기 조정 */
-  }
-  /* .user {
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
+}
+body {
+  background-color: #f3f2ed;
+  overflow-x: hidden;
+  font-family: "Pretendard", sans-serif;
+}
+
+/*header*/
+.header {
+  background-color: #0d3745;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0 20px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+
+.logo {
+  height: 50px;
+}
+.menu {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+.menu a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 17px;
+  padding: 10px;
+  margin-right: 13px;
+  width: 80px; /*텍스트 안 밀리게 수정*/
+  text-align: center;
+}
+.menu a:hover,
+.menu a:focus {
+  color: #ffffff;
+  border-bottom: 3px solid #ffffff;
+  font-weight: 600;
+}
+.search-container {
+  position: relative;
+}
+.search {
+  background-color: #0d3745;
+  color: #ffffff;
+  padding: 5px 10px 5px 35px;
+  width: 277px;
+  height: 30px;
+  border: 1px solid #ffffff;
+  text-align: left;
+  outline: none;
+  border-radius: 5px;
+  font-size: 14px;
+  background-image: url("Search.svg"); /* 검색 아이콘 이미지 추가 */
+  background-repeat: no-repeat;
+  background-position: 10px center; /* 이미지 위치 조정 */
+  background-size: 15px 15px; /* 이미지 크기 조정 */
+}
+/* .user {
     position: absolute;
     border-bottom: 1px solid #ffffff;
     color: #ffffff;
@@ -79,90 +79,89 @@
     cursor: pointer;
     right: 0;
   } */
-  .loginButton {
-    padding: 5px 10px;
-    border-radius: 5px;
-    background-color: #0d3745;
-    color: white;
-    border: 1px solid #ffffff;
-    cursor: pointer;
-  }
-  .signupButton {
-    padding: 5px 10px;
-    border-radius: 5px;
-    background-color: #8CFF47;
-    color: #0d3745;
-    border: 1px solid #0d3745;
-    cursor: pointer;
-  }
-  /*Buttom*/
-  .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 109px;
-    background-color: #eae8dc;
-    color: #a3a3a3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 15px;
-  }
-  .weare1ne {
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-  }
-  .bottom-logo {
-    height: 50px;
-    margin-right: 15px;
-  }
-  .text {
-    display: flex;
-    flex-direction: column;
-  }
-  .we {
-    font-weight: 600;
-    font-size: 25px;
-    /* margin-left: 15px; */
-  }
-  .team {
-    font-weight: 400;
-    font-size: 14px;
-    /* margin-left: 15px; */
-  }
-  .middle-wrapper {
-    /* display: flex;
+.loginButton {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #0d3745;
+  color: white;
+  border: 1px solid #ffffff;
+  cursor: pointer;
+}
+.signupButton {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #8cff47;
+  color: #0d3745;
+  border: 1px solid #0d3745;
+  cursor: pointer;
+}
+/*Buttom*/
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 109px;
+  background-color: #eae8dc;
+  color: #a3a3a3;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+}
+.weare1ne {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+}
+.bottom-logo {
+  height: 50px;
+  margin-right: 15px;
+}
+.text {
+  display: flex;
+  flex-direction: column;
+}
+.we {
+  font-weight: 600;
+  font-size: 25px;
+  /* margin-left: 15px; */
+}
+.team {
+  font-weight: 400;
+  font-size: 14px;
+  /* margin-left: 15px; */
+}
+.middle-wrapper {
+  /* display: flex;
     flex-direction: column;
     align-items: center; */
-    text-align: center;
-    width: 100%;
-  }
-  .middle {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    align-items: center; /* 세로 방향 가운데 정렬 */
-    /* width: 100%; 전체 너비 차지 */
-  }
-  .middle a {
-    text-decoration: none;
-    color: inherit;
-    font-weight: 600;
-    font-size: 18px;
-    margin-right: 10px;
-  }
-  .middle2 {
-    font-size: 12px;
-    text-align: center;
-  }
-  .sns {
-    display: flex;
-    padding-right: 40px;
-    gap: 10px;
-  }
-  .sns-icon {
-    height: 30px;
-    padding-right: 5px;
-  }
-  
+  text-align: center;
+  width: 100%;
+}
+.middle {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center; /* 세로 방향 가운데 정렬 */
+  /* width: 100%; 전체 너비 차지 */
+}
+.middle a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 600;
+  font-size: 18px;
+  margin-right: 10px;
+}
+.middle2 {
+  font-size: 12px;
+  text-align: center;
+}
+.sns {
+  display: flex;
+  padding-right: 40px;
+  gap: 10px;
+}
+.sns-icon {
+  height: 30px;
+  padding-right: 5px;
+}
