--- a/Presentation/Profile/profile.css
+++ b/Presentation/Profile/profile.css
@@ -10,8 +10,8 @@ body {
   font-family: "Pretendard", sans-serif;
 }
 
-/*header*/
-.header {
+/*mouseover*/
+#wrap{
   background-color: #0d3745;
   height: 70px;
   display: flex;
@@ -21,6 +21,7 @@ body {
   width: 100%;
   overflow: hidden;
   justify-content: space-between;
+  color: #ffffff;
 }
 .logo {
   justify-content: center;
@@ -29,82 +30,78 @@ body {
   align-items: center;
   margin: auto;
 }
-
-.menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-grow: 1;
-  width: 100%; /* 메뉴 전체를 화면 너비로 확장 */
-  position: relative;
+ul,li{
+  list-style: none;
 }
 
-.menu:hover .dropdown-content {
+a{
+  text-decoration: none;
+}
+#header{
+  position:fixed;
+  width: 100%;
+  left: 0;
+  padding: 0 30px;
+  box-sizing: border-box;
+  display:flex;
+  justify-content: center; /* 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
+}
+#gnb > li {
+  position: relative;
+  margin: 0; /* 부모 요소의 마진 제거 */
+}
+#gnb > li > a {
+  color: #ffffff; /* 기본 글씨 색상 */
+  text-decoration: none; /* 기본 링크 스타일 제거 */
+  padding: 10px; /* 링크에 패딩 추가 */
+  margin: 0; /* 링크 마진 제거 */
+  display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
+}
+#gnb > li > a:hover {
+  border-bottom: 2px solid #ffffff;
+}
+#header > #gnb {
+  width: 1200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#header > #gnb::before {
+  content: "";
+  width: 100%;
+  position:absolute;
+  top: 85px;
+  left: 0;
+  height: 180px;
+  background: #fff;
+  border-bottom: 1px solid #e1e1e1;
+  box-shadow: 0px 10px 10px 0px rgba(48,49,51,6%);
+  display: none;
+}
+
+#header > #gnb.on::before {
   display: block;
 }
-
-.menu a {
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: 300;
-  font-size: 17px;
-  padding: 10px;
-  margin-right: 40px;
-  width: 80px; /* 너비를 지정하여 텍스트가 밀리지 않도록 설정 */
+#header > #gnb > li .snb {
+  position:absolute;
+  top: 100px;
+  display:none;
+}
+#header > #gnb.on > li .snb {
+  display: block;
+  color: #0d3745;
   text-align: center;
 }
-
-.menu a:hover,
-.menu a:focus {
-  color: #ffffff;
-  border-bottom: 3px solid #ffffff;
-  font-weight: 600;
+#header > #gnb > li > .snb > ul > li + li {
+  margin-top:20px;
 }
-/* 드롭다운 메뉴 관련 스타일 */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  top: 70px; /* 헤더의 높이에 맞춰 위치 조정 */
-  left: 0;
-  width: 100vw; /* 화면 너비 전체를 차지하도록 설정 */
-  background-color: #ffffff;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1000;
+.snb {
+  margin: 0; /* 서브 메뉴 마진 제거 */
+  top: calc(100% + 0px);
 }
 
 
-/* 메뉴 항목 스타일 */
-.dropdown-content ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.dropdown-content li {
-  padding: 8px 16px;
-}
-
-.dropdown-content li a {
-  text-decoration: none;
-  color: black;
-  display: block;
-}
-
-.dropdown-content li a:hover {
-  background-color: #f1f1f1; /* hover 시 배경색 추가 */
-}
-.dropdown-content li a:hover {
-  background-color: #f1f1f1; /* hover 시 배경색 추가 */
-}
-.dropdown-content {
-  background-color: #ffffff;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
 
 /* Management*/
 .management {
