--- a/Presentation/Attendance/attendance.css
+++ b/Presentation/Attendance/attendance.css
@@ -1,1 +1,224 @@
-/* attendance */
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
+}
+body {
+  overflow-x: hidden;
+  font-family: "Pretendard", sans-serif;
+}
+.header {
+  background-color: #0d3745;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0 20px;
+  width: 100%;
+  overflow: hidden;
+  justify-content: space-between;
+}
+.logo {
+  justify-content: center;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-grow: 1;
+  width: 100%; /* 메뉴 전체를 화면 너비로 확장 */
+  position: relative;
+}
+
+.menu:hover .dropdown-content {
+  display: block;
+}
+
+.menu a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 17px;
+  padding: 10px;
+  margin-right: 40px;
+  width: 80px; /* 너비를 지정하여 텍스트가 밀리지 않도록 설정 */
+  text-align: center;
+}
+
+.menu a:hover,
+.menu a:focus {
+  color: #ffffff;
+  border-bottom: 3px solid #ffffff;
+  font-weight: 600;
+}
+/* 드롭다운 메뉴 관련 스타일 */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 70px; /* 헤더의 높이에 맞춰 위치 조정 */
+  left: 0;
+  width: 100vw; /* 화면 너비 전체를 차지하도록 설정 */
+  background-color: #ffffff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+/* 메뉴 항목 스타일 */
+.dropdown-content ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown-content li {
+  padding: 8px 16px;
+}
+
+.dropdown-content li a {
+  text-decoration: none;
+  color: black;
+  display: block;
+}
+
+.dropdown-content li a:hover {
+  background-color: #f1f1f1; /* hover 시 배경색 추가 */
+}
+.dropdown-content li a:hover {
+  background-color: #f1f1f1; /* hover 시 배경색 추가 */
+}
+.dropdown-content {
+  background-color: #ffffff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.hello {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 50px 20px 20px 20px;
+}
+
+.hello-container {
+  width: 50%;
+  border: 1px solid grey;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 500px;
+}
+
+.hello-pic {
+  height: 200px;
+  margin-bottom: 50px;
+}
+.description {
+  margin-bottom: 30px;
+  font-weight: 100;
+}
+.greeting-container {
+  display: flex;
+  align-items: center;
+}
+
+#greeting {
+  margin-right: 5px;
+}
+.logout-button {
+  width: 30%;
+  padding: 10px;
+  background-color: #0d3745;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.logout-button:hover {
+  background-color: #092837;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f9f8f4;
+  color: #a3a3a3;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+}
+
+.weare1ne {
+  display: flex;
+  align-items: center;
+}
+
+.bottom-logo {
+  height: 50px;
+  margin-right: 15px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+}
+
+.we {
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.team {
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.middle-wrapper {
+  text-align: center;
+  width: 100%;
+}
+
+.middle {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
+
+.middle a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 600;
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+.middle2 {
+  font-size: 12px;
+  text-align: center;
+}
+
+.sns {
+  display: flex;
+  padding-right: 40px;
+  gap: 10px;
+}
+
+.sns-icon {
+  height: 30px;
+  padding-right: 5px;
+}
