--- a/Presentation/Profile/profile.css
+++ b/Presentation/Profile/profile.css
@@ -6,12 +6,12 @@
 }
 body {
   background-color: hsl(50, 20%, 94%);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   font-family: "Pretendard", sans-serif;
 }
 
 /*mouseover*/
-#wrap{
+#wrap {
   background-color: #0d3745;
   height: 70px;
   display: flex;
@@ -30,20 +30,21 @@ body {
   align-items: center;
   margin: auto;
 }
-ul,li{
+ul,
+li {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
-#header{
-  position:fixed;
+#header {
+  position: fixed;
   width: 100%;
   left: 0;
   padding: 0 30px;
   box-sizing: border-box;
-  display:flex;
+  display: flex;
   justify-content: center; /* 중앙 정렬 */
   align-items: center; /* 수직 중앙 정렬 */
 }
@@ -70,13 +71,13 @@ a{
 #header > #gnb::before {
   content: "";
   width: 100%;
-  position:absolute;
-  top: 85px;
+  position: absolute;
+  top: 50px;
   left: 0;
-  height: 180px;
+  height: 120px;
   background: #fff;
   border-bottom: 1px solid #e1e1e1;
-  box-shadow: 0px 10px 10px 0px rgba(48,49,51,6%);
+  box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
   display: none;
 }
 
@@ -84,9 +85,9 @@ a{
   display: block;
 }
 #header > #gnb > li .snb {
-  position:absolute;
-  top: 100px;
-  display:none;
+  position: absolute;
+  top: 80px;
+  display: none;
 }
 #header > #gnb.on > li .snb {
   display: block;
@@ -94,23 +95,20 @@ a{
   text-align: center;
 }
 #header > #gnb > li > .snb > ul > li + li {
-  margin-top:20px;
+  margin-top: 20px;
 }
 .snb {
   margin: 0; /* 서브 메뉴 마진 제거 */
   top: calc(100% + 0px);
 }
 
-
-
 /* Management*/
 .management {
   font-size: 15px;
-  color: #3F3E39;
+  color: #3f3e39;
   margin-left: 10px;
   margin-top: 7px;
 }
-
 
 /*Profile*/
 .profile-wrapper {
@@ -179,7 +177,6 @@ a{
   border-radius: 5px;
   background-color: #f9f9f9;
 }
-
 
 /* footer */
 .footer {
