--- a/Presentation/Profile/profile.css
+++ b/Presentation/Profile/profile.css
@@ -37,6 +37,7 @@ li {
 
 a {
   text-decoration: none;
+  color: black;
 }
 #header {
   position: fixed;
@@ -134,7 +135,6 @@ a {
 .profile-pic {
   width: 100px;
   height: 100px;
-  border-radius: 50%;
   margin-right: 20px;
 }
 .profile-info {
