--- a/Presentation/Main/main.css
+++ b/Presentation/Main/main.css
@@ -8,10 +8,11 @@
 body {
   overflow-x: hidden;
   font-family: "Pretendard", sans-serif;
+  background-color: #f3f2ed;
 }
 
 .header {
-  height: 70px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,11 +22,11 @@ body {
   position: fixed;
   top: 0;
   z-index: 1000;
-  border-bottom: 2px solid rgb(233, 232, 232);
+  border-bottom: 3px solid #cfcec9;
 }
 
 .logo {
-  height: 50px;
+  height: 70px;
   margin: auto;
 }
 
@@ -33,16 +34,27 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 100px 20px 20px 20px;
+  padding: 150px 20px 20px 20px;
 }
 
 .promotion {
   width: 45%;
-  text-align: center;
+  margin-top: 35px;
+  margin-left: 200px;
+  font-size: 20px;
+  color: #3f3e39;
 }
-
+.ad-pic {
+  margin-bottom: 5px;
+}
+.highlight {
+  font-size: 25px;
+  font-weight: bold !important;
+  color: #71571f;
+}
 .tab {
-  width: 45%;
+  width: 40%;
+  margin-right: 100px;
 }
 
 .tab-buttons {
@@ -54,14 +66,18 @@ body {
   flex: 1;
   padding: 15px 20px;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  background-color: #f3f2ed;
   cursor: pointer;
   text-align: center;
+  border-bottom: 2px solid #ccc;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .tab-button.active {
   background-color: white;
-  border-top: 1px solid white;
+  border-top: 2px solid white;
+  font-weight: bold;
 }
 
 .tab-content-container {
@@ -69,7 +85,10 @@ body {
   min-height: 400px;
   border: 1px solid #ccc;
   border-bottom: none;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   padding: 20px;
+  background-color: white;
 }
 
 .tab-content {
@@ -98,6 +117,8 @@ body {
 .centered-form .form-group {
   width: 100%;
   max-width: 400px;
+  margin: 20px auto; /* Center and add margin to all sides */
+  text-align: center; /* Center text */
 }
 
 .form-group {
@@ -109,25 +130,30 @@ body {
   margin-bottom: 5px;
 }
 
-#new-member-form input,
-#existing-member-form input {
-  width: 100%;
+.exist-greet {
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+input {
+  width: calc(100% - 20px); /* Add side margins */
   height: 40px;
   padding: 0 10px;
   box-sizing: border-box;
-  margin-bottom: 8px;
+  margin-bottom: 15px; /* Add bottom margin */
   border-radius: 5px;
   background-color: #f3f2ed;
   border: 1px solid #ccc;
+  margin: 0 auto; /* Center the inputs */
 }
 
-#new-member-form input::placeholder,
-#existing-member-form input::placeholder {
+input::placeholder {
   color: gray;
 }
 
-#new-member-form input:focus,
-#existing-member-form input:focus {
+input:focus {
   outline: none;
   border-color: #0d3745;
 }
@@ -135,6 +161,7 @@ body {
 .keep_check {
   display: flex;
   align-items: center;
+  margin: 20px 0; /* Add top and bottom margin */
 }
 
 #keep.input_keep {
@@ -151,18 +178,15 @@ body {
 }
 
 .submit-button {
-  width: 100%;
+  width: calc(100% - 20px); /* Add side margins */
   padding: 10px;
-  background-color: #0d3745;
+  background-color: #71571f;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
   font-size: 16px;
   cursor: pointer;
-}
-
-.submit-button:hover {
-  background-color: #092837;
+  margin: 20px auto; /* Center and add margin to all sides */
 }
 
 .footer {
@@ -170,7 +194,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #f9f8f4;
+  background-color: #eae8dc;
   color: #a3a3a3;
   display: flex;
   justify-content: space-between;
@@ -186,21 +210,6 @@ body {
 .bottom-logo {
   height: 50px;
   margin-right: 15px;
-}
-
-.text {
-  display: flex;
-  flex-direction: column;
-}
-
-.we {
-  font-weight: 600;
-  font-size: 25px;
-}
-
-.team {
-  font-weight: 400;
-  font-size: 14px;
 }
 
 .middle-wrapper {
