--- a/Presentation/Attendance/attendance.css
+++ b/Presentation/Attendance/attendance.css
@@ -5,11 +5,15 @@
   box-sizing: border-box;
 }
 body {
+  background-color: hsl(50, 20%, 94%);
   overflow-x: hidden;
   font-family: "Pretendard", sans-serif;
 }
+
+
+/*mouseover*/
 #wrap {
-  background-color: #0d3745;
+  background-color: #3F3E39;
   height: 70px;
   display: flex;
   align-items: center;
@@ -21,88 +25,116 @@ body {
   color: #ffffff;
 }
 .logo {
-  justify-content: center;
   height: 50px;
   display: flex;
-  align-items: center;
-  margin: auto;
+  margin-left: 0;
 }
-ul,
+l,
 li {
-  list-style: none;
+list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: black;
+text-decoration: none;
+color: black;
 }
 #header {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  padding: 0 30px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center; /* 중앙 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
+position: fixed;
+width: 100%;
+left: 0;
+padding: 0 30px;
+box-sizing: border-box;
+display: flex;
+justify-content: center; /* 중앙 정렬 */
+align-items: center; /* 수직 중앙 정렬 */
 }
 #gnb > li {
-  position: relative;
-  margin: 0; /* 부모 요소의 마진 제거 */
+position: relative;
+margin: 0; /* 부모 요소의 마진 제거 */
 }
 #gnb > li > a {
-  color: #ffffff; /* 기본 글씨 색상 */
-  text-decoration: none; /* 기본 링크 스타일 제거 */
-  padding: 10px; /* 링크에 패딩 추가 */
-  margin: 0; /* 링크 마진 제거 */
-  display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
+color: #ffffff; /* 기본 글씨 색상 */
+text-decoration: none; /* 기본 링크 스타일 제거 */
+padding: 10px; /* 링크에 패딩 추가 */
+margin: 0; /* 링크 마진 제거 */
+display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
 }
 #gnb > li > a:hover {
-  border-bottom: 2px solid #ffffff;
+border-bottom: 2px solid #ffffff;
 }
 #header > #gnb {
-  width: 1200px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+width: 1200px;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
 }
 #header > #gnb::before {
-  content: "";
-  width: 100%;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  height: 120px;
-  background: #fff;
-  border-bottom: 1px solid #e1e1e1;
-  box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
-  display: none;
+content: "";
+width: 100%;
+position: absolute;
+top: 50px;
+left: 0;
+height: 120px;
+background: #fff;
+border-bottom: 1px solid #e1e1e1;
+box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
+display: none;
 }
 
 #header > #gnb.on::before {
-  display: block;
+display: block;
 }
 #header > #gnb > li .snb {
-  position: absolute;
-  top: 80px;
-  display: none;
+position: absolute;
+top: 80px;
+display: none;
 }
 #header > #gnb.on > li .snb {
-  display: block;
-  color: #0d3745;
-  text-align: center;
+display: block;
+color: #0d3745;
+text-align: center;
 }
 #header > #gnb > li > .snb > ul > li + li {
-  margin-top: 20px;
+margin-top: 20px;
 }
 .snb {
-  margin: 0;
-  top: calc(100% + 0px);
+margin: 0;
+top: calc(100% + 0px);
+}
+.search-container {
+  position: relative;
+}
+.search {
+  background-color: #3F3E39;
+  color: #ffffff;
+  padding: 5px 10px 5px 35px;
+  height: 30px;
+  border: 1px solid #ffffff;
+  text-align: left;
+  outline: none;
+  border-radius: 5px;
+  font-size: 14px;
+  background-image: url("../../Assets/Main/Search.svg"); /* 검색 아이콘 이미지 추가 */
+  background-repeat: no-repeat;
+  background-position: 10px center; /* 이미지 위치 조정 */
+  background-size: 15px 15px; /* 이미지 크기 조정 */
+}
+
+
+/*display*/
+.display {
+  color: #A9A79E;
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: 17px;
+  margin-top: 13px;
+  margin-bottom: 20px;
 }
 
 .goto-profile {
   text-decoration: none;
 }
+
 
 .hello {
   display: flex;
@@ -112,8 +144,9 @@ a {
 }
 
 .hello-container {
-  width: 50%;
-  border: 1px solid grey;
+  width: 40%;
+  border: 2px solid #CFCEC9;
+  background-color: #ffffff;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -123,12 +156,28 @@ a {
 }
 
 .hello-pic {
-  height: 200px;
+  height: 150px;
   margin-bottom: 50px;
+  margin-top: 20px;
+}
+.clock{
+  margin-right: 10px;
+  margin-top: 11px;
 }
 .description {
-  margin-bottom: 30px;
-  font-weight: 100;
+  display: flex;
+  align-items: center; /* 세로 가운데 정렬 */
+  color: #3F3E39;
+  margin-bottom: 25px;
+  font-weight: 700;
+  font-size: 30px;
+}
+.description > #submissionTime{
+  color: #88867A;
+  margin-top: 17px;
+  margin-bottom: 1px;
+  font-weight: 500;
+  font-size: 15px;
 }
 .greeting-container {
   display: flex;
@@ -137,19 +186,21 @@ a {
 
 #greeting {
   margin-right: 5px;
+  color: #F6C04B;
 }
 .logout-button {
-  width: 30%;
+  width: 60%;
   padding: 10px;
-  background-color: #0d3745;
-  color: white;
+  background-color: #71571F;
+  color: #ffffff;
   border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 25px;
+  font-size: 20px;
+  font-weight: 500;
   cursor: pointer;
 }
 .logout-button:hover {
-  background-color: #092837;
+  background-color: #F6C04B;
 }
 .footer {
   position: fixed;
