--- a/Presentation/Secondhand/secondhand.css
+++ b/Presentation/Secondhand/secondhand.css
@@ -5,11 +5,13 @@
   box-sizing: border-box;
 }
 body {
-  overflow-x: hidden;
+  background-color: #F3F2ED;
+  /* overflow-x: hidden; */
   font-family: "Pretendard", sans-serif;
 }
+/*mouseover*/
 #wrap {
-  background-color: #0d3745;
+  background-color: #3F3E39;
   height: 70px;
   display: flex;
   align-items: center;
@@ -21,84 +23,113 @@ body {
   color: #ffffff;
 }
 .logo {
-  justify-content: center;
   height: 50px;
   display: flex;
-  align-items: center;
-  margin: auto;
+  margin-left: 0;
 }
-ul,
+l,
 li {
-  list-style: none;
+list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: black;
+text-decoration: none;
+color: black;
 }
 #header {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  padding: 0 30px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center; /* 중앙 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
+position: fixed;
+width: 100%;
+left: 0;
+padding: 0 30px;
+box-sizing: border-box;
+display: flex;
+justify-content: center; /* 중앙 정렬 */
+align-items: center; /* 수직 중앙 정렬 */
 }
 #gnb > li {
-  position: relative;
-  margin: 0; /* 부모 요소의 마진 제거 */
+position: relative;
+margin: 0; /* 부모 요소의 마진 제거 */
 }
 #gnb > li > a {
-  color: #ffffff; /* 기본 글씨 색상 */
-  text-decoration: none; /* 기본 링크 스타일 제거 */
-  padding: 10px; /* 링크에 패딩 추가 */
-  margin: 0; /* 링크 마진 제거 */
-  display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
+color: #ffffff; /* 기본 글씨 색상 */
+text-decoration: none; /* 기본 링크 스타일 제거 */
+padding: 10px; /* 링크에 패딩 추가 */
+margin: 0; /* 링크 마진 제거 */
+display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
 }
 #gnb > li > a:hover {
-  border-bottom: 2px solid #ffffff;
+border-bottom: 2px solid #ffffff;
 }
 #header > #gnb {
-  width: 1200px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+width: 1200px;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
 }
 #header > #gnb::before {
-  content: "";
-  width: 100%;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  height: 120px;
-  background: #fff;
-  border-bottom: 1px solid #e1e1e1;
-  box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
-  display: none;
+content: "";
+width: 100%;
+position: absolute;
+top: 50px;
+left: 0;
+height: 120px;
+background: #fff;
+border-bottom: 1px solid #e1e1e1;
+box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
+display: none;
 }
 
 #header > #gnb.on::before {
-  display: block;
+display: block;
 }
 #header > #gnb > li .snb {
-  position: absolute;
-  top: 80px;
-  display: none;
+position: absolute;
+top: 80px;
+display: none;
 }
 #header > #gnb.on > li .snb {
-  display: block;
-  color: #0d3745;
-  text-align: center;
+display: block;
+color: #0d3745;
+text-align: center;
 }
 #header > #gnb > li > .snb > ul > li + li {
-  margin-top: 20px;
+margin-top: 20px;
 }
 .snb {
-  margin: 0;
-  top: calc(100% + 0px);
+margin: 0;
+top: calc(100% + 0px);
 }
+.search-container {
+  position: relative;
+}
+.search {
+  background-color: #3F3E39;
+  color: #ffffff;
+  padding: 5px 10px 5px 35px;
+  height: 30px;
+  border: 1px solid #ffffff;
+  text-align: left;
+  outline: none;
+  border-radius: 5px;
+  font-size: 14px;
+  background-image: url("../../Assets/Main/Search.svg"); /* 검색 아이콘 이미지 추가 */
+  background-repeat: no-repeat;
+  background-position: 10px center; /* 이미지 위치 조정 */
+  background-size: 15px 15px; /* 이미지 크기 조정 */
+}
+
+/* display */
+.display {
+  color: #A9A79E;
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: 17px;
+  margin-top: 13px; /* header 아래로 위치시키기 위해 margin-top 조정 */
+  margin-bottom: 20px;
+  position: relative; /* 다른 fixed 요소들과의 겹침 방지 */
+  z-index: 1; /* 다른 요소들 위에 표시되도록 z-index 설정 */
+}
+
 
 .footer {
   position: fixed;
@@ -169,7 +200,7 @@ a {
   right: 20px;
   width: 50px;
   height: 50px;
-  background-color: #0d3745;
+  background-color: #3F3E39;
   color: white;
   border: none;
   border-radius: 50%;
@@ -180,7 +211,7 @@ a {
   cursor: pointer;
 }
 .add-button:hover {
-  background-color: #092837;
+  background-color: #F6C04B;
 }
 
 .modal {
@@ -197,10 +228,10 @@ a {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #ffffff;
   margin: 15% auto;
   padding: 20px;
-  border: 1px solid #888;
+  border: 1px solid #CFCEC9;
   width: 80%;
   max-width: 500px;
   height: auto; /* 높이를 자동으로 설정하여 폼 내용에 맞게 조절 */
@@ -211,7 +242,10 @@ a {
 }
 
 h2 {
-  margin-bottom: 10px;
+  text-align: center;
+  margin-bottom: 15px !important;
+  color: #3F3E39;
+  font-weight: 900 !important;
 }
 
 #write-post-form {
@@ -233,21 +267,41 @@ h2 {
 }
 
 .post-content {
-  width: 70%;
+  width: 40%;
 }
 
 .post {
-  background-color: #fff;
-  border: 1px solid #ddd;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border: 2px solid #CFCEC9;
   padding: 20px;
-  margin: 10px 0;
-  border-radius: 5px;
+  margin: 0 auto;
+  border-radius: 10px;
+  width: 1000px;
+  margin-top: 30px;
 }
+/*.post {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-left: 40px;
+  width: 1000px; 
+  margin: 0 auto; 
+  padding-top: 10px; 
+  box-sizing: border-box;
+  border: 2px solid #CFCEC9;
+  background-color: #FFFFFF;
+  border-radius: 15px;
+  gap: 25px;
+}*/
 
 .submit-button {
   width: 100%;
   padding: 10px;
-  background-color: #0d3745;
+  background-color: #3F3E39;
   color: white;
   border: none;
   border-radius: 5px;
@@ -257,7 +311,8 @@ h2 {
 }
 
 .submit-button:hover {
-  background-color: #092837;
+  color: #3F3E39;
+  background-color: #F6C04B;
 }
 
 .form-group {
@@ -270,4 +325,7 @@ h2 {
   padding: 10px; /* 입력 칸에 패딩을 추가합니다. */
   border: 1px solid #ddd; /* 입력 칸의 테두리를 설정합니다. */
   border-radius: 5px; /* 입력 칸의 모서리를 둥글게 만듭니다. */
+}
+.post > p {
+  text-align: center;
 }
